Fix av img align samt meta

--- a/sass/parts/_header.scss
+++ b/sass/parts/_header.scss
@@ -301,7 +301,7 @@ ul#nav li a:hover {
     /*background-color:#444;
     border-radius:20px;*/
     font-size:24px;
-    overflow: visible;
+    /*overflow: visible;*/
     -webkit-transition: all 0.4s ease 0s;
     -moz-transition: all 0.4s ease 0s;
     -o-transition: all 0.4s ease 0s;
